# Rust-sandbox

./: README.md
financial-llm-poc/: Cargo.toml  README.md
financial-llm-poc/src/: document_types.rs  financial_analyzer.rs  main.rs
pavex_di_tutorial/: Cargo.toml
pavex_di_tutorial/01-basic-setup/: Cargo.toml
pavex_di_tutorial/01-basic-setup/src/: main.rs
pavex_di_tutorial/02-dependency-injection/: Cargo.toml
pavex_di_tutorial/02-dependency-injection/src/: main.rs
pavex_di_tutorial/03-middleware-and-errors/: Cargo.toml
pavex_di_tutorial/03-middleware-and-errors/src/: main.rs
pavex_di_tutorial/04-testing-strategies/: Cargo.toml
pavex_di_tutorial/04-testing-strategies/src/: lib.rs  main.rs
pavex_di_tutorial/shared-dependencies/: Cargo.toml
pavex_di_tutorial/shared-dependencies/src/: lib.rs
rust-di-tutorial/: Cargo.toml
rust-di-tutorial/01-manual-di/: Cargo.toml
rust-di-tutorial/01-manual-di/src/: main.rs
rust-di-tutorial/02-trait-based-di/: Cargo.toml
rust-di-tutorial/03-dyn-trait-di/: Cargo.toml
rust-di-tutorial/04-arc-mutex-di/: Cargo.toml
rust-di-tutorial/05-dependency-container/: Cargo.toml
rust-di-tutorial/shared-dependencies/: Cargo.toml
rust-postgresql-tut/: Cargo.toml
rust-postgresql-tut/src/: main.rs  setup.rs
rust_encryption_tut/: Cargo.toml  README.md
rust_encryption_tut/src/: basic_ciphers.rs  lib.rs  main.rs  secure_ciphers.rs
rust_inheritance_tutorial/: .gitignore  Cargo.toml
rust_inheritance_tutorial/src/: main.rs
rust_ownership_tutorial/: Cargo.toml
rust_ownership_tutorial/src/: main.rs  ownership.rs  types.rs  vectors.rs
(+5 files in other folders)
