[workspace]
members = [
    "01-basic-setup", "01-basic-setup/Cargo",
    "02-dependency-injection",
    "03-middleware-and-errors",
    "04-testing-strategies",
    "05-full-rest-api",
    "shared-dependencies"
, "shared-dependencies/Cargo"]

[workspace.dependencies]
pavex = "0.5"
pavex-cli = "0.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
secrecy = { version = "1.0", features = ["serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
