[package]
name = "testing-strategies"
version = "0.1.0"
edition = "2021"

[dependencies]
pavex = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shared-dependencies = { path = "../shared-dependencies" }

[dev-dependencies]
pavex = { workspace = true }
tokio = { workspace = true }